--- a/old-book-theme-v3.css
+++ b/old-book-theme-v3.css
@@ -1,10 +1,6 @@
-
 /* Old Notebook Theme for Homebrewery Version 3 by John Jones is licensed under CC BY-SA 4.0 -- January 2021 */
 
 @import url('https://fonts.googleapis.com/css2?family=Jim+Nightshade&family=Rock+Salt&family=Fredericka+the+Great&family=Cabin+Sketch:wght@400;700&family=Reenie+Beanie&display=swap');
-
-
-
 
 .phb3 {
   width:11in;
@@ -12,7 +8,7 @@
   column-count:2;
   column-gap:100px;
   background-color:transparent;
-  background-image: url('https://i.imgur.com/rTNBHqN.png');
+  background-image: url('https://rawcdn.githack.com/nytewatchman/Homebrewery-Snippets/a768dfed4fc91f5738f92a62ee42d68a9ce6e83f/images/rTNBHqN.png');
   background-position:center;
   background-size:100% 100%;
   background-repeat:no-repeat;
@@ -25,10 +21,8 @@
   display:none;
 }
 
-
-
 .phb3:nth-of-type(1) {
-  background-image:url('https://i.imgur.com/SK0nuuC.png');
+  background-image:url('https://rawcdn.githack.com/nytewatchman/Homebrewery-Snippets/a768dfed4fc91f5738f92a62ee42d68a9ce6e83f/images/SK0nuuC.png');
 }
 
   /* PAGE NUMBERS */
@@ -55,7 +49,6 @@
 }
 
 /* TEXT TEXT TEXT */
-
 
 .phb3 p, .phb3 table, .phb3 ul, .phb3 blockquote, .phb3 blockquote strong  {
   font-family:'Reenie Beanie';
@@ -137,7 +130,6 @@
   padding-bottom:5px
 }
 
-
 /*  TABLES  */
 
 .phb3 table tbody tr:nth-child(2n+1) {
@@ -156,7 +148,6 @@
 .phb3 .classTable tbody tr {
   line-height:.5em
 }
-
 
 /*  LISTS  */
 
@@ -177,7 +168,7 @@ column-span: none;
 
 .phb3 blockquote {
   border:20px solid;
-  border-image:url('https://i.imgur.com/k544p79.png');
+  border-image:url('https://rawcdn.githack.com/nytewatchman/Homebrewery-Snippets/a768dfed4fc91f5738f92a62ee42d68a9ce6e83f/images/k544p79.png');
   border-image-slice:25% 10%;
   border-image-width:30px;
   border-image-repeat:stretch;
@@ -195,7 +186,7 @@ column-span: none;
   background:none;
   box-shadow:none;
   border-style:solid;
-  border-image:url('https://i.imgur.com/I2hMYzK.png');
+  border-image:url('https://rawcdn.githack.com/nytewatchman/Homebrewery-Snippets/a768dfed4fc91f5738f92a62ee42d68a9ce6e83f/images/I2hMYzK.png');
   border-image-slice:38% 10%;
   border-image-width:40px;
   border-image-repeat:stretch;
@@ -220,14 +211,12 @@ column-span: none;
   font-family:inherit
 }
 
-
-
 /* MONSTER STAT BLOCKS */
 
 .phb3 hr + blockquote {
   background:none;
   border:20px solid;
-  border-image:url('https://i.imgur.com/k544p79.png');
+  border-image:url('https://rawcdn.githack.com/nytewatchman/Homebrewery-Snippets/a768dfed4fc91f5738f92a62ee42d68a9ce6e83f/images/k544p79.png');
   border-image-slice:25% 10%;
   border-image-width:30px;
   border-image-repeat:stretch;
@@ -262,4 +251,3 @@ padding: 5px 0px
 .phb3 hr + blockquote li {
   font-size:20px;
 }
-
